# robot-ai-mission-planner

./: .gitignore  README.md  commands  frames_2026-07-01_11.59.57.gv  frames_2026-07-01_12.06.57.gv  main.py
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  architecture.md  design_decisions.md  development_log.md  future_work.md  project_progress.md
ros2_ws/: frames_2026-07-01_16.54.37.gv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robot_ai_mission_planner/lib/robot_ai_mission_planner/: mission_planner
ros2_ws/install/robot_ai_mission_planner/share/robot_ai_mission_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/robot_ai_mission_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_ai_mission_planner/launch/: mission_system.launch.py
ros2_ws/src/robot_ai_mission_planner/missions/: inspection_loop.json  perimeter_loop.json  warehouse_route.json
ros2_ws/src/robot_ai_mission_planner/robot_ai_mission_planner/: executor_node.py  main.py  mission_publisher.py  mission_subscriber.py
ros2_ws/src/robot_ai_mission_planner/robot_ai_mission_planner/executor/: mission_executor.py  mission_executor_v1.py
ros2_ws/src/robot_ai_mission_planner/robot_ai_mission_planner/interfaces/: ros2_interface.py
ros2_ws/src/robot_ai_mission_planner/robot_ai_mission_planner/validator/: json_validator.py
src/executor/: mission_executor.py
src/interfaces/: mission_schema.py
src/mission_llm/: llm_parser.py
src/validator/: json_validator.py
tests/: mission_listener.py
