<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>robot_ai_mission_planner</name>

  <version>0.1.0</version>

  <description>
    AI Mission Planner using ROS2 and LLMs
  </description>

  <maintainer email="adithya062002@gmail.com">
    Adithya Satheesh
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>

  <test_depend>ament_pep257</test_depend>

  <test_depend>python3-pytest</test_depend>

  <export>

    <build_type>ament_python</build_type>

  </export>

</package>
